--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,6 +1,5 @@
-.quote {
-  text-align: left;
-  display: flex;
-  flex-direction: column;
-  width: 50%;
+.carousel {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
 }
